BSS-9078  [MD]-Layout issue on view details page.

--- a/src/assets/css/components/_tile.scss
+++ b/src/assets/css/components/_tile.scss
@@ -24,4 +24,5 @@
 }
 .width-auto{
     width:auto;
+    vertical-align: top;
 }
